# ayib

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  btcusd_ohlc_data.csv  eurusd_ohlc_data.csv  gold_ohlc_data.csv  indx_ohlc_data.csv  main.cpp
lib/: CMakeLists.txt
lib/include/: Cell.h  Document.h  Layer.h  Network.h
lib/src/: Cell.cpp  Document.cpp  Layer.cpp  Network.cpp
lib/test/: CMakeLists.txt  Tests.cpp
